--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,12 @@ dependencies {
     // Use JUnit Jupiter Engine for testing.
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 
+    //AssertJ
+    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.6.1'
+
+    //Lombok
+    compileOnly group: 'org.projectlombok', name: 'lombok', version: '0.11.0'
+
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:30.0-jre'
 }
